# tunein-gui

./: .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  tunein.rs
src/lib/components/: settings.svelte  title-bar.svelte
src/lib/components/main/: configuration-window.svelte  console.svelte  controls.svelte  index.svelte  index.ts  xml-view.svelte
src/lib/stores/: global.ts  settings.store.ts  xml-obj.store.ts
src/lib/utils/: audio-parse.ts  dds-parse.ts  dialog.ts  update-xml.svelte.ts  xml-convert.ts
src/lib/utils/settings/: init.ts
src/lib/utils/tuneincrew/: get-latest.ts  index.ts
src/lib/utils/xml-convert/: index.ts  sanitize-xml.ts  types.d.ts
