[package]
name = "tunein-gui"
version = "0.0.3"
description = "Unofficial GUI for TuneinCrew - Create custom radio stations for The Crew 2014"
authors = ["DogFoxX"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
image = "0.25.8"
image_dds = "0.7.2"
base64 = "0.22.1"
ddsfile = "0.5.2"
reqwest = "0.12.23"
tauri-plugin-http = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
